--- a/taptan/Base.lproj/Main.storyboard
+++ b/taptan/Base.lproj/Main.storyboard
@@ -37,8 +37,18 @@
                                     <color key="titleColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="752-aO-9is">
+                                <rect key="frame" x="110" y="406" width="100" height="100"/>
+                                <color key="backgroundColor" red="0.80000001192092896" green="0.40000000596046448" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
-                                    <action selector="onMyButtonClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nwd-k6-Ggi"/>
+                                    <action selector="theTouchDown:" destination="vXZ-lx-hvc" eventType="touchDown" id="gyY-BC-RP5"/>
+                                    <action selector="theTouchUpInside:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="dvR-5X-81X"/>
+                                    <action selector="theTouchUpOutside:" destination="vXZ-lx-hvc" eventType="touchUpOutside" id="Gs3-W3-DLx"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -46,8 +56,8 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="btn" destination="Ad2-XV-UC2" id="Rco-bP-eXQ"/>
-                        <outlet property="timerLabel" destination="eI0-Q5-fTf" id="qbH-hP-Ygr"/>
+                        <outlet property="btn" destination="Ad2-XV-UC2" id="CmG-8q-1OG"/>
+                        <outlet property="timerLabel" destination="eI0-Q5-fTf" id="h5V-lp-0HZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
